@@ -21,7 +21,6 @@ Backlog {
 	* Textures
 		* Try making atlas packer with stbrp_pack_rects.
 	* Examples
-		* Improve Dungeon crawler example by generating custom mesh instead of drawing 3D quads.
 		* Platformer example physics update for true framerate independence.
 	* Android support
 }
