@@ -37,6 +37,7 @@ DETAILED CHANGES:
 	- CHANGE: SetBufferData takes table of values.
 	- ADDED: Texture atlas repeat example.
 	- CHANGE: UpdateTexture and UpdateTextureRec now take pixel data as Buffer.
+	- ADDED: Blend modes example.
 
 ------------------------------------------------------------------------
 Release:	ReiLua version 0.8.0		Using Raylib 5.0 and Forked Raygui 4.0
